# ClearNote

./: .env.example  .gitignore  CLAUDE.md  ClearNote_Production_Plan.docx  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  jobs.py  router.py  visits.py  websocket.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  job.py  summary.py  transcript.py  user.py  visit.py
backend/app/middleware/: clerk_auth.py
backend/app/schemas/: job.py  user.py  visit.py
backend/app/services/: ai.py  s3.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: cleanup.py  finalize.py  summarize.py  transcribe.py
backend/eval/: cases.json  metrics.py  run_eval.py
backend/tests/: conftest.py  test_cleanup.py  test_health.py  test_jobs.py  test_migrations.py  test_users_me.py  test_visits.py  test_workers.py
docs/superpowers/plans/: 2026-03-14-phase1-foundation.md  2026-03-17-phase2-ai-inference.md
docs/superpowers/specs/: 2026-03-14-phase1-foundation-design.md
frontend/: index.html  npm_install_log.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useRecorder.test.ts  useRecorder.ts  useWebSocket.ts
frontend/src/lib/: api.ts  s3Upload.ts
frontend/src/routes/: Dashboard.test.tsx  (+6 more)
(+2 files in other folders)
